Gutter landing page fixed

--- a/wp-content/themes/inclusiva/assets/styles/common/_global.scss
+++ b/wp-content/themes/inclusiva/assets/styles/common/_global.scss
@@ -1045,7 +1045,7 @@ figure{
 		}
 	}
 	section{
-    padding: 3rem 0 7rem;
+    padding: 3rem 15px 7rem;
 		.page-header{
 			position: relative;
 			margin: 0 0 30px !important;
