--- a/wp-content/themes/inclusiva/assets/styles/components/_buddypress.scss
+++ b/wp-content/themes/inclusiva/assets/styles/components/_buddypress.scss
@@ -113,6 +113,29 @@
 
 				#item-body{
 					padding-bottom: 30px;
+					.post{
+						.author-box{
+							clear: both;
+							img{
+								float: left;
+								width: 24px;
+								height: 24px;
+							}
+							p{
+								float: left;
+								font-size: 10px;
+								line-height: 24px;
+								
+							}
+						}
+						.post-content{
+							.post-featured-image{
+								img{
+									@extend .img-responsive;
+								}
+							}
+						}
+					}
 				}
 			}
 		}
