--- a/wp-content/themes/inclusiva/assets/styles/components/_buddypress.scss
+++ b/wp-content/themes/inclusiva/assets/styles/components/_buddypress.scss
@@ -142,6 +142,13 @@
 							}
 						}
 					}
+					#respond{
+						background-color: #eeeeee;
+						padding: 15px;
+						#reply-title{
+							margin-top: 0;
+						}
+					}
 				}
 			}
 		}
