Ocula author info de buddypress

--- a/wp-content/themes/inclusiva/assets/styles/components/_buddypress.scss
+++ b/wp-content/themes/inclusiva/assets/styles/components/_buddypress.scss
@@ -120,6 +120,7 @@
 						background-color: $white;
 						padding: 15px;
 						.author-box{
+							display: none;
 							img{
 								float: left;
 								width: 24px;
