--- a/wp-content/themes/inclusiva/assets/styles/layouts/_footer.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_footer.scss
@@ -115,7 +115,7 @@ footer{
 					a{
 						width: 170px;
 						height: 50px;
-						background-image: url('../images/logo__peru.gif');
+						background-image: url('../images/el_peru_primero.png');
 					}
 				}
 			}
