Se modifica los estilos del modal home

--- a/wp-content/themes/inclusiva/assets/styles/layouts/_home.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_home.scss
@@ -364,8 +364,8 @@
 	}
 	.sl__modal-home{
 		.modal-header{
-			background-color: $yellow--light;
-			color: $brown;
+			background-color: $brand-primary;
+			color: $white;
 		}
 		.owl-nav{
 			position: absolute;
