Sociluciona bugs en el modal home

--- a/wp-content/themes/inclusiva/assets/styles/common/_global.scss
+++ b/wp-content/themes/inclusiva/assets/styles/common/_global.scss
@@ -118,6 +118,16 @@ body{
   }
 }
 
+#fontPageModal {
+  .modal-body {
+    img {
+      display: block;
+      max-width: 100%;
+      height: auto;
+    }
+  }
+}
+
 a, button.btn-link{
   color: $red;
   &:hover, &:active{
